可以向服务器发测试文本消息

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "weixin-api-debug",
   "version": "0.1.0",
-  "description": "weixin-api-debug ================",
+  "description": "weixin-api-debug",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shuaishuai/weixin-api-debug.git"
+    "url": "https://github.com/hbrls/weixin-api-debug.git"
   },
   "keywords": [
     "weixin",
@@ -18,33 +18,31 @@
   "author": "shuaizhexu@gmail.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuaishuai/weixin-api-debug/issues"
+    "url": "https://github.com/hbrls/weixin-api-debug/issues"
   },
-  "homepage": "https://github.com/shuaishuai/weixin-api-debug",
+  "homepage": "https://github.com/hbrls/weixin-api-debug",
   "browserify-shim": {
-    "lodash": "global:_",
-    "react": "global:React",
-    "vue": "global:Vue"
+    "angular": "global:angular"
   },
   "browserify": {
     "transform": [
-      "reactify",
+      "brfs",
       "browserify-shim"
     ]
   },
   "devDependencies": {
+    "brfs": "^1.4.0",
     "browserify": "^8.0.3",
     "browserify-shim": "^3.8.2",
+    "exorcist": "^0.1.6",
     "gulp": "^3.8.10",
     "gulp-jshint": "^1.9.0",
-    "gulp-rename": "^1.2.0",
-    "reactify": "^0.17.1",
-    "vinyl-transform": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "angular": "^1.3.14",
+    "bootstrap": "^3.3.2",
     "highlight.js": "^8.4.0",
-    "lodash": "^2.4.1",
-    "react": "^0.12.2",
-    "vue": "^0.11.4"
+    "lodash": "^2.4.1"
   }
 }
