--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
   },
   "dependencies": {
     "angular": "^1.3.14",
+    "angular-route": "^1.3.14",
     "bootstrap": "^3.3.2",
     "highlight.js": "^8.4.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "q": "^1.2.0",
+    "superagent": "^0.21.0",
+    "uuid": "^2.0.1"
   }
 }
