--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build.pem
 
 # Dependency directory
 # Commenting this out is preferred by some people, see
