--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-build.pem
-
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
@@ -25,3 +23,7 @@ node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+*.js.map
+
+build.pem
