--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "highlight.js": "^8.9.1",
+    "localforage": "^1.3.1",
     "superagent": "^0.21.0",
     "uuid": "^2.0.1",
     "vue": "^1.0.11-csp"
