--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
     "css-loader": "^0.23.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.0.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.11.3",
     "gulp": "^3.9.0",
     "gulp-shell": "^0.5.1",
     "node-sass": "^3.4.2",
