--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-loader": "^0.8.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "vue-lite-loader": "github:hbrls/vue-lite-loader",
     "webpack": "^1.12.9"
   },
   "dependencies": {
