--- a/package.json
+++ b/package.json
@@ -20,29 +20,27 @@
   },
   "homepage": "https://github.com/hbrls/weixin-api-debug",
   "devDependencies": {
-    "babel-core": "^5.8.34",
-    "babel-loader": "^5.4.0",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.0.0",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
-    "gulp": "^3.9.0",
-    "gulp-shell": "^0.5.1",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.0",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
+    "babel-core": "5.8.34",
+    "babel-loader": "5.4.0",
+    "css-loader": "0.23.0",
+    "eslint": "1.10.3",
+    "eslint-config-airbnb": "2.0.0",
+    "eslint-loader": "1.1.1",
+    "eslint-plugin-react": "3.11.3",
+    "node-sass": "3.4.2",
+    "postcss-loader": "0.8.0",
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0",
     "vue-lite-loader": "github:hbrls/vue-lite-loader",
-    "webpack": "^1.12.9"
+    "webpack": "1.12.9"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
-    "highlight.js": "^8.9.1",
-    "localforage": "^1.3.1",
-    "superagent": "^0.21.0",
-    "uuid": "^2.0.1",
-    "vue": "^1.0.11-csp",
-    "vuex": "^0.2.0"
+    "bootstrap": "3.3.6",
+    "highlight.js": "8.9.1",
+    "localforage": "1.3.1",
+    "superagent": "0.21.0",
+    "uuid": "2.0.1",
+    "vue": "1.0.11-csp",
+    "vuex": "0.2.0"
   }
 }
