--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wechat-api-debug",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "wechat-api-debug",
   "main": "index.js",
   "scripts": {},
@@ -23,17 +23,19 @@
   "devDependencies": {
     "babel-core": "5.8.34",
     "babel-loader": "5.4.0",
-    "css-loader": "0.23.0",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "2.0.0",
-    "eslint-loader": "1.1.1",
-    "eslint-plugin-react": "3.11.3",
-    "node-sass": "3.4.2",
-    "postcss-loader": "0.8.0",
-    "sass-loader": "3.1.2",
-    "style-loader": "0.13.0",
+    "css-loader": "0.23.1",
+    "eslint": "2.11.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-loader": "1.3.0",
+    "eslint-plugin-import": "1.8.1",
+    "eslint-plugin-jsx-a11y": "1.2.2",
+    "eslint-plugin-react": "5.1.1",
+    "node-sass": "3.6.0",
+    "postcss-loader": "0.9.1",
+    "sass-loader": "3.2.0",
+    "style-loader": "0.13.1",
     "vue-lite-loader": "github:hbrls/vue-lite-loader",
-    "webpack": "1.13.0"
+    "webpack": "1.13.1"
   },
   "dependencies": {
     "bootstrap": "3.3.6",
