--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,16 @@
 {
   "extends": "airbnb",
 
+  "env": {
+    "browser": true,
+    "node": true
+  },
+
   "rules": {
     // Mine
-    "camelcase": [0],
     "max-len": [0],
     "no-console": [0],
     "no-else-return": [0],
-    "no-new": [0],
     "no-underscore-dangle": 0,
     "no-unused-vars": [2, {"vars": "local", "args": "after-used", "varsIgnorePattern": "^_$"}],
     "object-shorthand": [0],
@@ -18,8 +21,5 @@
     "func-names": [0],
     "no-param-reassign": [2, { "props": false }],
     "prefer-arrow-callback": [0],
-
-    // vue-lite-loader
-    "react/react-in-jsx-scope": [0],
   }
 }
