--- a/package.json
+++ b/package.json
@@ -1,47 +1,63 @@
 {
   "name": "wechat-api-debug",
-  "version": "0.2.6",
-  "description": "wechat-api-debug",
-  "main": "index.js",
-  "scripts": {},
+  "version": "0.3.0",
+  "description": "wechat-api-debug based on electron, vue, element",
+  "scripts": {
+    "build": "node tasks/release.js",
+    "build:clean": "cross-env PLATFORM_TARGET=clean node tasks/release.js",
+    "build:darwin": "cross-env PLATFORM_TARGET=darwin node tasks/release.js",
+    "build:linux": "cross-env PLATFORM_TARGET=linux node tasks/release.js",
+    "build:mas": "cross-env PLATFORM_TARGET=mas node tasks/release.js",
+    "build:win32": "cross-env PLATFORM_TARGET=win32 node tasks/release.js",
+    "dev": "node tasks/runner.js",
+    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter app",
+    "pack": "cross-env NODE_ENV=production webpack -p --progress --colors",
+    "vue:route": "node tasks/vue/route.js",
+    "vuex:module": "node tasks/vuex/module.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wechat-developer/wechat-api-debug"
   },
-  "keywords": [
-    "wechat",
-    "weixin",
-    "api",
-    "debug"
-  ],
-  "author": "shuaizhexu@gmail.com",
+  "author": "hbrls <shuaizhexu@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wechat-developer/wechat-api-debug/issues"
-  },
-  "homepage": "https://github.com/wechat-developer/wechat-api-debug",
   "devDependencies": {
-    "babel-core": "5.8.34",
-    "babel-loader": "5.4.0",
-    "css-loader": "0.23.1",
-    "eslint": "2.11.1",
+    "babel-core": "6.16.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-runtime": "6.11.6",
+    "cross-env": "1.0.7",
+    "css-loader": "0.25.0",
+    "del": "2.2.2",
+    "devtron": "1.3.0",
+    "electron": "1.4.2",
+    "electron-devtools-installer": "1.1.4",
+    "electron-packager": "8.1.0",
+    "electron-prebuilt": "1.4.2",
+    "electron-rebuild": "1.2.1",
+    "eslint": "2.10.2",
     "eslint-config-airbnb": "9.0.1",
+    "eslint-friendly-formatter": "2.0.5",
     "eslint-loader": "1.3.0",
+    "eslint-plugin-html": "1.3.0",
     "eslint-plugin-import": "1.8.1",
     "eslint-plugin-jsx-a11y": "1.2.2",
     "eslint-plugin-react": "5.1.1",
-    "node-sass": "3.6.0",
-    "postcss-loader": "0.9.1",
-    "sass-loader": "3.2.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.22.0",
+    "json-loader": "0.5.4",
     "style-loader": "0.13.1",
-    "vue-lite-loader": "github:hbrls/vue-lite-loader",
-    "webpack": "1.13.1"
+    "tree-kill": "1.1.0",
+    "url-loader": "0.5.7",
+    "vue-hot-reload-api": "1.3.2",
+    "vue-html-loader": "1.2.3",
+    "vue-loader": "9.5.1",
+    "vue-style-loader": "1.0.0",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.16.1"
   },
-  "dependencies": {
-    "bootstrap": "3.3.6",
-    "highlight.js": "8.9.1",
-    "localforage": "1.3.1",
-    "vue": "1.0.11-csp",
-    "vuex": "0.2.0"
-  }
+  "dependencies": {}
 }
