--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,9 @@
   "plugins": [
     "transform-runtime",
     "transform-vue-jsx",
+    ["component", [{
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-default"
+    }]],
   ],
 }
