--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "wechat-api-debug based on electron, vue, element",
   "main": "electron.js",
   "dependencies": {
+    "element-ui": "1.0.0-rc.5",
     "highlight.js": "9.7.0",
     "localforage": "1.4.2",
     "vue": "2.0.1",
