--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "6.16.0",
     "babel-helper-vue-jsx-merge-props": "2.0.1",
     "babel-loader": "6.2.5",
+    "babel-plugin-component": "0.4.2",
     "babel-plugin-syntax-jsx": "6.13.0",
     "babel-plugin-transform-runtime": "6.15.0",
     "babel-plugin-transform-vue-jsx": "3.1.0",
