--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "6.16.0",
+    "babel-helper-vue-jsx-merge-props": "2.0.1",
     "babel-loader": "6.2.5",
+    "babel-plugin-syntax-jsx": "6.13.0",
     "babel-plugin-transform-runtime": "6.15.0",
+    "babel-plugin-transform-vue-jsx": "3.1.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "babel-runtime": "6.11.6",
+    "change-case": "3.0.0",
     "cross-env": "1.0.7",
     "css-loader": "0.25.0",
     "del": "2.2.2",
