--- a/package.json
+++ b/package.json
@@ -57,12 +57,19 @@
     "style-loader": "0.13.1",
     "tree-kill": "1.1.0",
     "url-loader": "0.5.7",
+    "vue": "^2.1.10",
     "vue-hot-reload-api": "1.3.2",
     "vue-html-loader": "1.2.3",
     "vue-loader": "9.5.1",
+    "vue-router": "^2.1.3",
     "vue-style-loader": "1.0.0",
+    "vuex": "^2.1.1",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "element-ui": "^1.1.5",
+    "highlight.js": "^9.9.0",
+    "localforage": "^1.4.3"
+  }
 }
