--- a/mockup/.babelrc
+++ b/mockup/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["vue-app"]
+  "presets": [
+    "es2015",
+    "stage-0",
+    "react"
+  ],
+  "plugins": [
+    "transform-runtime"
+  ]
 }
