--- a/mockup/package.json
+++ b/mockup/package.json
@@ -4,9 +4,11 @@
   "description": "wechat pivot server",
   "ENTRY": {
     "index": "./rsrc/index",
-    "oauth": "./rsrc/oauth"
+    "oauth": "./rsrc/oauth",
+    "debugger": "./rsrc/debugger"
   },
   "dependencies": {
+    "antd": "2.13.13",
     "assets-webpack-plugin": "3.5.1",
     "axios": "0.16.2",
     "babel-core": "6.26.0",
@@ -16,13 +18,13 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "babel-preset-vue-app": "1.2.0",
     "css-loader": "0.28.4",
     "del": "3.0.0",
+    "dva": "2.1.0",
+    "dva-model-extend": "0.1.2",
     "egg": "1.7.0",
     "egg-sequelize": "3.1.0",
     "egg-view-nunjucks": "2.1.3",
-    "element-ui": "2.0.5",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "gulp": "3.9.1",
@@ -33,12 +35,13 @@
     "postcss-nested": "2.1.1",
     "postcss-ordered-values": "2.2.3",
     "promise-wechat-oauth": "1.0.1",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-router": "4.2.0",
+    "react-router-redux": "4.0.8",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "vanilla.js": "0.1.0",
-    "vue": "2.5.8",
-    "vue-loader": "10.3.0",
-    "vue-template-compiler": "2.5.8",
     "webpack": "2.7.0",
     "webpack-merge": "4.1.0"
   },
@@ -51,9 +54,10 @@
     "eslint-config-airbnb": "14.1.0",
     "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "1.7.1",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
+    "prop-types": "15.6.1",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
     "stylelint-webpack-plugin": "0.7.0",
