--- a/mockup/package.json
+++ b/mockup/package.json
@@ -13,11 +13,13 @@
     "axios": "0.16.2",
     "babel-core": "6.26.0",
     "babel-loader": "6.4.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "classnames": "2.2.5",
     "css-loader": "0.28.4",
     "del": "3.0.0",
     "dva": "2.1.0",
