--- a/mockup/package.json
+++ b/mockup/package.json
@@ -4,8 +4,7 @@
   "description": "wechat pivot server",
   "ENTRY": {
     "index": "./rsrc/index",
-    "oauth": "./rsrc/oauth",
-    "debugger": "./rsrc/debugger"
+    "oauth": "./rsrc/oauth"
   },
   "dependencies": {
     "antd": "2.13.13",
@@ -24,15 +23,10 @@
     "del": "3.0.0",
     "dva": "2.1.0",
     "dva-model-extend": "0.1.2",
-    "egg": "1.7.0",
-    "egg-sequelize": "3.1.0",
-    "egg-view-nunjucks": "2.1.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "gulp": "3.9.1",
     "gulp-replace": "0.6.1",
-    "pg": "7.3.0",
-    "pg-hstore": "2.3.2",
     "postcss-loader": "2.0.6",
     "postcss-nested": "2.1.1",
     "postcss-ordered-values": "2.2.3",
@@ -43,15 +37,18 @@
     "react-router-redux": "4.0.8",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
-    "vanilla.js": "0.1.0",
+    "vanilla.js": "0.1.4",
     "webpack": "2.7.0",
     "webpack-merge": "4.1.0"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
-    "egg-bin": "4.1.0",
+    "egg": "2.2.1",
+    "egg-bin": "4.3.5",
     "egg-ci": "1.8.0",
     "egg-mock": "3.9.1",
+    "egg-sequelize": "3.1.0",
+    "egg-view-nunjucks": "2.1.3",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-import-resolver-webpack": "0.8.1",
@@ -59,6 +56,8 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
+    "pg": "7.3.0",
+    "pg-hstore": "2.3.2",
     "prop-types": "15.6.1",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
@@ -67,7 +66,7 @@
     "webpack-dev-server": "2.7.1"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.9.0"
   },
   "scripts": {
     "start": "egg-bin dev --port 7002",
