--- a/mockup/package.json
+++ b/mockup/package.json
@@ -4,7 +4,8 @@
   "description": "wechat pivot server",
   "ENTRY": {
     "index": "./rsrc/index",
-    "oauth": "./rsrc/oauth"
+    "oauth": "./rsrc/oauth",
+    "debugger": "./rsrc/debugger"
   },
   "dependencies": {
     "antd": "2.13.13",
@@ -12,6 +13,7 @@
     "axios": "0.16.2",
     "babel-core": "6.26.0",
     "babel-loader": "6.4.1",
+    "babel-plugin-import": "1.4.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
@@ -27,6 +29,7 @@
     "file-loader": "0.11.2",
     "gulp": "3.9.1",
     "gulp-replace": "0.6.1",
+    "lodash": "4.17.5",
     "postcss-loader": "2.0.6",
     "postcss-nested": "2.1.1",
     "postcss-ordered-values": "2.2.3",
