A: pivot jssdk config

--- a/mockup/Dockerfile
+++ b/mockup/Dockerfile
@@ -7,13 +7,17 @@ RUN \
 
 
 # npm install
-RUN buildDeps='git make g++' && \
+RUN \
+  buildDeps='git make g++' && \
   apt-get update && apt-get install -y $buildDeps && \
-  cd /var/app && npm install --no-optional --production && \
-  npm cache clean --force && \
-  npm run build && rm -r /var/app/node_modules && \
-  apt-get purge -y --auto-remove $buildDeps && \
-  rm -rf /var/lib/apt/lists/*
+  cd /var/app && npm install --no-optional && npm cache clean --force && \
+  npm run build && rm -r /var/app/node_modules
+
 
 # eggjs node_modules
-RUN mv /var/app0/node_modules /var/app
+RUN \
+  mv /var/app0/node_modules /var/app && \
+  cd /var/app && npm install --no-optional --production && npm cache clean --force
+
+
+RUN apt-get purge -y --auto-remove $buildDeps && rm -rf /var/lib/apt/lists/*
