--- a/pivot/Dockerfile
+++ b/pivot/Dockerfile
@@ -9,9 +9,13 @@ RUN \
 # npm install
 RUN buildDeps='git make g++' && \
   apt-get update && apt-get install -y $buildDeps && \
-  # eggjs node_modules
-  mv /var/app0/node_modules /var/app && \
-  cd /var/app && npm install --no-optional --production && \
-  npm cache clean --force && \
-  apt-get purge -y --auto-remove $buildDeps && \
-  rm -rf /var/lib/apt/lists/*
+  cd /var/app && npm install --no-optional && npm cache clean --force && \
+  npm run build && rm -r /var/app/node_modules
+
+
+# eggjs node_modules
+RUN mv /var/app0/node_modules /var/app && \
+  cd /var/app && npm install --no-optional --production && npm cache clean --force
+
+
+RUN apt-get purge -y --auto-remove $buildDeps && rm -rf /var/lib/apt/lists/*
