--- a/pivot/package.json
+++ b/pivot/package.json
@@ -4,11 +4,13 @@
   "description": "wechat pivot server",
   "dependencies": {
     "egg": "2.2.1",
+    "egg-mq": "0.0.6",
     "egg-sequelize": "3.1.0",
     "egg-view-nunjucks": "2.1.3",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
-    "promise-wechat-api": "1.0.1",
+    "promise-wechat-api": "1.0.2",
+    "promise-wechat-message": "0.0.2",
     "promise-wechat-oauth": "1.0.1",
     "utility": "1.13.1",
     "vanilla.js": "0.1.4"
