--- a/pivot/Dockerfile
+++ b/pivot/Dockerfile
@@ -6,16 +6,14 @@ RUN \
   rm -r /var/app && mv /var/wechat-pivot-docker-pivot/pivot /var/app
 
 
-# npm install
-RUN buildDeps='git make g++' && \
-  apt-get update && apt-get install -y $buildDeps && \
-  cd /var/app && npm install --no-optional && npm cache clean --force && \
-  npm run build && rm -r /var/app/node_modules
+RUN \
+  mv /var/app-build/node_modules /var/app && \
+  # cd /var/app && \
+  # npm run build && \
+  rm -rf /var/app/node_modules
 
 
-# eggjs node_modules
-RUN mv /var/app0/node_modules /var/app && \
-  cd /var/app && npm install --no-optional --production && npm cache clean --force
-
-
-RUN apt-get purge -y --auto-remove $buildDeps && rm -rf /var/lib/apt/lists/*
+RUN \
+  mv /var/app-run/node_modules /var/app && \
+  cd /var/app && \
+  npm install --production --no-optional
