--- a/pivot/package.json
+++ b/pivot/package.json
@@ -1,12 +1,13 @@
 {
   "name": "wechat-pivot",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "wechat pivot server",
   "dependencies": {
     "egg": "2.2.1",
     "egg-mq": "0.0.8",
     "egg-sequelize": "3.1.0",
     "egg-view-nunjucks": "2.1.3",
+    "egg-web": "0.0.4",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
     "promise-wechat-api": "1.0.2",
