F: egg-web build

--- a/mockup/Dockerfile
+++ b/mockup/Dockerfile
@@ -5,19 +5,31 @@ RUN \
   tar -zxvf /var/docker-mockup.tar.gz -C /var && rm /var/docker-mockup.tar.gz && \
   rm -r /var/app && mv /var/wechat-pivot-docker-mockup/mockup /var/app
 
-
-# npm install
 RUN \
-  buildDeps='git make g++' && \
-  apt-get update && apt-get install -y $buildDeps && \
-  cd /var/app && npm install --no-optional && npm cache clean --force && \
-  npm run build && rm -r /var/app/node_modules
+  mv /var/app/package-build.json /var/app-build/package.json && \
+  cd /var/app-build && npm install --production --no-optional --no-package-lock && \
+  mv /var/app-build/node_modules /var/app && \
+  cd /var/app && npm run build && \
+  rm -rf /var/app/node_modules
 
-
-# eggjs node_modules
 RUN \
-  mv /var/app0/node_modules /var/app && \
-  cd /var/app && npm install --no-optional --production && npm cache clean --force
+  mv /var/app-run/node_modules /var/app && \
+  cd /var/app && \
+  npm install --production --no-optional --no-package-lock
 
 
-RUN apt-get purge -y --auto-remove $buildDeps && rm -rf /var/lib/apt/lists/*
+# # npm install
+# RUN \
+#   buildDeps='git make g++' && \
+#   apt-get update && apt-get install -y $buildDeps && \
+#   cd /var/app && npm install --no-optional && npm cache clean --force && \
+#   npm run build && rm -r /var/app/node_modules
+
+
+# # eggjs node_modules
+# RUN \
+#   mv /var/app0/node_modules /var/app && \
+#   cd /var/app && npm install --no-optional --production && npm cache clean --force
+
+
+# RUN apt-get purge -y --auto-remove $buildDeps && rm -rf /var/lib/apt/lists/*
