--- a/mockup/package.json
+++ b/mockup/package.json
@@ -8,10 +8,23 @@
     "debugger": "./rsrc/debugger"
   },
   "dependencies": {
+    "egg": "2.2.1",
+    "egg-sequelize": "3.1.0",
+    "egg-view-nunjucks": "2.1.3",
+    "egg-web": "0.0.4",
+    "le_node": "1.7.1",
+    "lodash": "4.17.5",
+    "pg": "7.3.0",
+    "pg-hstore": "2.3.2",
+    "promise-wechat-oauth": "1.0.1",
+    "vanilla.js": "0.1.4"
+  },
+  "devDependencies": {
     "antd": "2.13.13",
     "assets-webpack-plugin": "3.5.1",
     "axios": "0.16.2",
     "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
     "babel-loader": "6.4.1",
     "babel-plugin-import": "1.4.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -25,33 +38,9 @@
     "del": "3.0.0",
     "dva": "2.1.0",
     "dva-model-extend": "0.1.2",
-    "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "0.11.2",
-    "gulp": "3.9.1",
-    "gulp-replace": "0.6.1",
-    "lodash": "4.17.5",
-    "postcss-loader": "2.0.6",
-    "postcss-nested": "2.1.1",
-    "postcss-ordered-values": "2.2.3",
-    "promise-wechat-oauth": "1.0.1",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
-    "react-router": "4.2.0",
-    "react-router-redux": "4.0.8",
-    "style-loader": "0.18.2",
-    "url-loader": "0.5.9",
-    "vanilla.js": "0.1.4",
-    "webpack": "2.7.0",
-    "webpack-merge": "4.1.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "7.2.3",
-    "egg": "2.2.1",
     "egg-bin": "4.3.5",
     "egg-ci": "1.8.0",
     "egg-mock": "3.9.1",
-    "egg-sequelize": "3.1.0",
-    "egg-view-nunjucks": "2.1.3",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-import-resolver-webpack": "0.8.1",
@@ -59,14 +48,27 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "pg": "7.3.0",
-    "pg-hstore": "2.3.2",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
+    "gulp": "3.9.1",
+    "gulp-replace": "1.0.0",
+    "postcss-loader": "2.0.6",
+    "postcss-nested": "2.1.1",
+    "postcss-ordered-values": "2.2.3",
     "prop-types": "15.6.1",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-router": "4.2.0",
+    "react-router-redux": "4.0.8",
+    "style-loader": "0.18.2",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
     "stylelint-webpack-plugin": "0.7.0",
     "supertest": "3.0.0",
-    "webpack-dev-server": "2.7.1"
+    "url-loader": "0.5.9",
+    "webpack": "2.7.0",
+    "webpack-dev-server": "2.7.1",
+    "webpack-merge": "4.1.0"
   },
   "engines": {
     "node": ">=8.9.0"
@@ -75,7 +77,7 @@
     "start": "egg-bin dev --port 7002",
     "dev": "NODE_ENV=development webpack-dev-server --config ./build/webpack.config.dev.js",
     "_build": "NODE_ENV=production webpack --progress --display-error-details --config ./build/webpack.config.prod.js",
-    "build": "gulp clean && npm run _build && gulp replace",
+    "build": "gulp clean && npm run _build && gulp replace && gulp logger",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
