--- a/mockup/package.json
+++ b/mockup/package.json
@@ -11,13 +11,13 @@
     "egg": "2.2.1",
     "egg-sequelize": "3.1.0",
     "egg-view-nunjucks": "2.1.3",
-    "egg-web": "0.0.4",
+    "egg-web": "0.1.5",
     "le_node": "1.7.1",
     "lodash": "4.17.5",
     "pg": "7.3.0",
     "pg-hstore": "2.3.2",
     "promise-wechat-oauth": "1.0.1",
-    "vanilla.js": "0.1.4"
+    "vanilla.js": "0.1.6"
   },
   "devDependencies": {
     "antd": "2.13.13",
@@ -75,9 +75,9 @@
   },
   "scripts": {
     "start": "egg-bin dev --port 7002",
-    "dev": "NODE_ENV=development webpack-dev-server --config ./build/webpack.config.dev.js",
-    "_build": "NODE_ENV=production webpack --progress --display-error-details --config ./build/webpack.config.prod.js",
-    "build": "gulp clean && npm run _build && gulp replace && gulp logger",
+    "dev": "NODE_ENV=development webpack-dev-server --config node_modules/egg-web/build/webpack.config.dev.js",
+    "_prod": "NODE_ENV=production webpack --display-error-details --config node_modules/egg-web/build/webpack.config.prod.js",
+    "build": "gulp _clean && npm run _prod && gulp _replace && gulp _logger",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
