--- a/pivot/package.json
+++ b/pivot/package.json
@@ -2,12 +2,21 @@
   "name": "wechat-pivot",
   "version": "0.0.3",
   "description": "wechat pivot server",
+  "ENTRY": {
+    "index": "./rsrc/index",
+    "oauth": "./rsrc/oauth",
+    "manager": "./rsrc/manager"
+  },
   "dependencies": {
     "egg": "2.2.1",
     "egg-mq": "0.0.11",
     "egg-web": "0.1.5",
     "le_node": "1.7.1",
     "lodash": "4.17.5",
+    "egg-sequelize": "3.1.0",
+    "egg-view-nunjucks": "2.1.3",
+    "pg": "7.3.0",
+    "pg-hstore": "2.3.2",
     "promise-wechat-api": "1.0.2",
     "promise-wechat-message": "0.0.4",
     "promise-wechat-oauth": "1.0.1",
@@ -16,13 +25,61 @@
     "vanilla.js": "0.1.7"
   },
   "devDependencies": {
-    "egg-bin": "4.3.5"
+    "assets-webpack-plugin": "3.5.1",
+    "axios": "0.16.2",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "6.4.1",
+    "babel-plugin-import": "1.4.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-runtime": "6.26.0",
+    "classnames": "2.2.5",
+    "css-loader": "0.28.4",
+    "del": "3.0.0",
+    "dva": "2.1.0",
+    "dva-model-extend": "0.1.2",
+    "egg-bin": "4.3.5",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-import-resolver-webpack": "0.8.1",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.10.3",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
+    "gulp": "3.9.1",
+    "gulp-replace": "1.0.0",
+    "postcss-loader": "2.0.6",
+    "postcss-nested": "2.1.1",
+    "postcss-ordered-values": "2.2.3",
+    "prop-types": "15.6.1",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
+    "react-router": "4.2.0",
+    "react-router-redux": "4.0.8",
+    "style-loader": "0.18.2",
+    "stylelint": "7.10.1",
+    "stylelint-config-standard": "16.0.0",
+    "stylelint-webpack-plugin": "0.7.0",
+    "url-loader": "0.5.9",
+    "webpack": "2.7.0",
+    "webpack-dev-server": "2.7.1",
+    "webpack-merge": "4.1.0"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-bin dev"
+    "start": "egg-bin dev",
+    "dev": "NODE_ENV=development webpack-dev-server --config node_modules/egg-web/build/webpack.config.dev.js",
+    "_prod": "NODE_ENV=production webpack --display-error-details --config node_modules/egg-web/build/webpack.config.prod.js",
+    "build": "gulp _clean && npm run _prod && gulp _replace && gulp _logger"
   },
   "repository": "https://github.com:wechat-developer/wechat-pivot",
   "author": "shuaizhexu@gmail.com",
