--- a/pivot/Dockerfile
+++ b/pivot/Dockerfile
@@ -1,17 +1,17 @@
-FROM hbrls/eggjs:latest
+FROM hbrls/egg-web:latest
 
-RUN \
-  cd /var && wget https://github.com/wechat-developer/wechat-pivot/archive/docker-pivot.tar.gz && \
-  tar -zxvf /var/docker-pivot.tar.gz -C /var && rm /var/docker-pivot.tar.gz && \
-  rm -r /var/app && mv /var/wechat-pivot-docker-pivot/pivot /var/app
+COPY app /var/app/app
+COPY config /var/app/config
+COPY app.js /var/app/app.js
+COPY index.js /var/app/index.js
+COPY package.json /var/app/package.json
 
-
-RUN \
-  mv /var/app/package-build.json /var/app-build/package.json && \
-  cd /var/app-build && npm install --production --no-optional --no-package-lock && \
-  mv /var/app-build/node_modules /var/app && \
-  cd /var/app && npm run build && \
-  rm -rf /var/app/node_modules
+# RUN \
+#   mv /var/app/package-build.json /var/app-build/package.json && \
+#   cd /var/app-build && npm install --production --no-optional --no-package-lock && \
+#   mv /var/app-build/node_modules /var/app && \
+#   cd /var/app && npm run build && \
+#   rm -rf /var/app/node_modules
 
 RUN \
   mv /var/app-run/node_modules /var/app && \
