--- a/pivot/package.json
+++ b/pivot/package.json
@@ -1,41 +1,28 @@
 {
   "name": "wechat-pivot",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "wechat pivot server",
   "dependencies": {
     "egg": "2.2.1",
     "egg-mq": "0.0.11",
-    "egg-sequelize": "3.1.0",
-    "egg-view-nunjucks": "2.1.3",
-    "egg-web": "0.0.4",
+    "egg-web": "0.1.5",
     "le_node": "1.7.1",
-    "pg": "7.3.0",
-    "pg-hstore": "2.3.2",
+    "lodash": "4.17.5",
     "promise-wechat-api": "1.0.2",
     "promise-wechat-message": "0.0.4",
     "promise-wechat-oauth": "1.0.1",
+    "promise-wechat-pay": "0.0.1",
     "utility": "1.13.1",
-    "vanilla.js": "0.1.4"
+    "vanilla.js": "0.1.7"
   },
   "devDependencies": {
-    "egg-bin": "4.3.5",
-    "egg-ci": "1.8.0",
-    "egg-mock": "3.9.1"
+    "egg-bin": "4.3.5"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-bin dev",
-    "build": "npm --version",
-    "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "lint": "eslint .",
-    "ci": "npm run lint && npm run cov"
-  },
-  "ci": {
-    "version": "6"
+    "start": "egg-bin dev"
   },
   "repository": "https://github.com:wechat-developer/wechat-pivot",
   "author": "shuaizhexu@gmail.com",
