--- a/mockup/package.json
+++ b/mockup/package.json
@@ -4,23 +4,20 @@
   "description": "wechat pivot server",
   "ENTRY": {
     "index": "./rsrc/index",
-    "oauth": "./rsrc/oauth",
-    "debugger": "./rsrc/debugger"
+    "oauth": "./rsrc/oauth"
   },
   "dependencies": {
     "egg": "2.2.1",
     "egg-sequelize": "3.1.0",
     "egg-view-nunjucks": "2.1.3",
-    "egg-web": "0.1.5",
+    "egg-web": "0.1.9",
     "le_node": "1.7.1",
     "lodash": "4.17.5",
-    "pg": "7.3.0",
-    "pg-hstore": "2.3.2",
+    "mysql2": "1.6.4",
     "promise-wechat-oauth": "1.0.1",
     "vanilla.js": "0.1.6"
   },
   "devDependencies": {
-    "antd": "2.13.13",
     "assets-webpack-plugin": "3.5.1",
     "axios": "0.16.2",
     "babel-core": "6.26.0",
@@ -36,11 +33,7 @@
     "classnames": "2.2.5",
     "css-loader": "0.28.4",
     "del": "3.0.0",
-    "dva": "2.1.0",
-    "dva-model-extend": "0.1.2",
     "egg-bin": "4.3.5",
-    "egg-ci": "1.8.0",
-    "egg-mock": "3.9.1",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-import-resolver-webpack": "0.8.1",
@@ -64,7 +57,6 @@
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
     "stylelint-webpack-plugin": "0.7.0",
-    "supertest": "3.0.0",
     "url-loader": "0.5.9",
     "webpack": "2.7.0",
     "webpack-dev-server": "2.7.1",
