--- a/config/envfile.example
+++ b/config/envfile.example
@@ -1,9 +1,18 @@
 url.self=http:/www.example.com
 wechat.appid={appid}
 wechat.appsecret={appsecret}
+wechat.token={token}
+wechat.merchant.id={id}
+wechat.merchant.secret={secret}
+wechat.merchant.notify={url}
+mysql.address={address}
+mysql.database={database}
+mysql.username={username}
+mysql.password={password}
 rabbitmq.username={username}
 rabbitmq.password={password}
 rabbitmq.address={address}
 rabbitmq.port={port}
 logentries.token={token}
 egg.env=dev
+web.env=dev
